# stellar-contracts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
address/: dev.json  production.json  staging.json
config/: dev.json  production.json  staging.json
contracts-utils/: Cargo.toml
contracts-utils/src/: lib.rs
contracts/nonce-manager/: Cargo.toml
contracts/nonce-manager/src/: contract.rs  test.rs
contracts/nonce-manager/test_snapshots/test/: test_consume_nonce_should_fail_if_nonce_is_incorrect.1.json  test_consume_nonce_should_increment_nonce_if_nonce_is_correct.1.json  test_consume_nonce_should_require_auth.1.json  test_get_nonce_should_return_0_when_user_has_no_nonce.1.json
contracts/permission-manager/: Cargo.toml
contracts/permission-manager/src/: contract.rs  test.rs
contracts/permission-manager/test_snapshots/test/: test_admin_setup.1.json  test_grant_role_batch_non_whitelister_role_should_not_be_able_to_grant_whitelisted_role.1.json  test_grant_role_batch_whitelister_role_should_be_able_to_grant_whitelisted_roles.1.json  test_grant_role_non_whitelister_role_should_not_be_able_to_grant_whitelisted_role_case_1.1.json  test_grant_role_non_whitelister_role_should_not_be_able_to_grant_whitelisted_role_case_2.1.json  test_grant_role_whitelister_role_should_be_able_to_grant_whitelisted_role.1.json  test_has_role_should_return_none_when_user_does_not_have_role.1.json  test_has_role_should_return_some_when_user_has_role.1.json  test_revoke_role_batch_non_whitelister_role_should_not_be_able_to_revoke_whitelisted_role.1.json  test_revoke_role_batch_whitelister_role_should_be_able_to_revoke_whitelisted_roles.1.json
contracts/redemption/: Cargo.toml  permission_manager.wasm
contracts/redemption/src/: contract.rs  test.rs
contracts/redemption/test_snapshots/test/: test_add_token_should_require_owner_auth.1.json  test_cancel_redemption_fail_if_not_redemption_executor.1.json  test_cancel_redemption_fail_if_redemption_not_initiated.1.json  test_cancel_redemption_should_emit_a_redemption_cancelled_event.1.json  test_execute_redemption_batch_fail_if_not_redemption_executor.1.json  test_execute_redemption_batch_fail_if_redemption_not_initiated.1.json  test_execute_redemption_batch_should_emit_a_redemption_executed_events.1.json  test_execute_redemption_fail_if_not_redemption_executor.1.json  test_execute_redemption_fail_if_redemption_not_initiated.1.json  test_execute_redemptions_fail_if_not_redemption_executor.1.json  (+14 more)
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  test.rs
scripts/: bootstrap.sh  deploy_contracts.sh  generate_contract_libraries.sh  setup_contracts.sh
wasm/: permission_manager.wasm  redemption.wasm  token.wasm
(+50 files in other folders)
