[workspace]
resolver = "2"
members = ["contracts/*", "contracts-utils"]

[workspace.package]
authors = []
edition = "2021"
license = "Apache-2.0"
version = "0.0.1"

[workspace.dependencies]
soroban-sdk = "22.0.8"
stellar-tokens = "=0.4.1"
stellar-access = "=0.4.1"
stellar-contract-utils = "=0.4.1"
stellar-macros = "=0.4.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

