[package]
name = "contracts-utils"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
cargo_inherit = true

[lib]
name = "contracts_utils"
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true 